--- a/css/style.css
+++ b/css/style.css
@@ -107,13 +107,14 @@ input[name="user-password"] {
 }
 
 .header-top__buttons {
-	float: left;
+	float: right;
 	-webkit-border-radius: 10px/10px 10px 9px 9px;
 	-moz-border-radius: 10px/10px 10px 9px 9px;
 	border-radius: 10px/10px 10px 9px 9px;
 	background-color: #fff;
 	border: solid 1px #bdc4c7;
-	margin-left: 19px;
+	margin-left: -13px;
+	margin-right: 7px;
 	margin-top: 19px;
 	padding: 0px 7px 2px 7px;
 	-webkit-box-shadow: 0px 1px 2px 0px rgba(140,150,154,1);
@@ -336,6 +337,7 @@ input[name="user-password"] {
 	line-height: 23px;
 	padding-top: 2px;
 	padding-bottom: 1px;
+	letter-spacing: 0.4px;
 	color: #114165;
 	display: block;
 	width: 181px;
@@ -377,6 +379,7 @@ input[name="user-password"] {
 	font: 12px/13px "Lucida Sans Unicode", Arial, sans-serif;
 	padding-left: 1px;
 	line-height: 23px;
+	letter-spacing: 1px;
 	padding-top: 2px;
 	padding-bottom: 1px;
 	color: #114165;
@@ -410,12 +413,13 @@ input[name="user-password"] {
 	font-style: italic;
 	color: #0c3256;
 	font-weight: 900;
+	letter-spacing: 0.4px;
 	text-decoration: underline;
 }
 
 .center-content {
 	float: left;
-	margin: 0 2px 30px;
+	margin: 0 4px 30px;
 	padding: 0 0 10px 0px;
 	-webkit-border-radius: 3px/2px 2px 3px 3px;
 	-moz-border-radius: 3px/2px 2px 3px 3px;
@@ -427,7 +431,7 @@ input[name="user-password"] {
 	background-image: -ms-linear-gradient(bottom, rgba(35,75,93,.49), rgba(201,207,209,.49));
 	background-image: linear-gradient(to top, rgba(35,75,93,.49), rgba(201,207,209,.49));
 	width: 526px;
-	height: 627px;
+	height: 619px;
 }
 
 .product-items-item {
@@ -443,6 +447,10 @@ input[name="user-password"] {
 }
 
 .product-items-item span {
+	display: block;
+}
+
+.product-items-item figcaption {
 	display: block;
 }
 
@@ -463,6 +471,85 @@ input[name="user-password"] {
 	line-height: 0px;
 }
 
+.products-items-title-goodyear {
+	font-size: 16px;
+	color: #206988;
+	font-weight: 700;
+	line-height: 13px;
+	font-family: "Lucida Sans Unicode", Arial, sans-serif;
+	margin-left: 18px;
+}
+
+.products-items-subtitle-goodyear {
+	font-size: 13px;
+	color: #1f2528;
+	font-family: "Lucida Sans Unicode", Arial, sans-serif;
+	margin-top: 8px;
+	margin-bottom: 8px;
+	line-height: 0px;
+	margin-left: 21px;
+}
+
+.products-items-title-nokian {
+	font-size: 16px;
+	color: #206988;
+	font-weight: 700;
+	line-height: 13px;
+	font-family: "Lucida Sans Unicode", Arial, sans-serif;
+	margin-left: 7px;
+
+}
+
+.products-items-subtitle-nokian {
+	font-size: 14px;
+	color: #1f2528;
+	font-family: "Lucida Sans Unicode", Arial, sans-serif;
+	margin-top: 7px;
+	margin-bottom: 8px;
+	line-height: 0px;
+	margin-left: 8px;
+}
+
+.products-items-title-hankook {
+	font-size: 16px;
+	color: #206988;
+	font-weight: 700;
+	line-height: 15px;
+	font-family: "Lucida Sans Unicode", Arial, sans-serif;
+	margin-left: -8px;
+	letter-spacing: -1.2px;
+
+}
+
+.products-items-subtitle-hankook {
+	font-size: 13px;
+	color: #1f2528;
+	font-family: "Lucida Sans Unicode", Arial, sans-serif;
+	margin-top: 7px;
+	margin-bottom: 8px;
+	line-height: 0px;
+	margin-left: -11px;
+}
+
+.products-items-title-goodyear2 {
+	font-size: 16px;
+	color: #206988;
+	font-weight: 700;
+	line-height: 13px;
+	font-family: "Lucida Sans Unicode", Arial, sans-serif;
+	margin-left: 18px;
+}
+
+.products-items-subtitle-goodyear2 {
+	font-size: 13px;
+	color: #1f2528;
+	font-family: "Lucida Sans Unicode", Arial, sans-serif;
+	margin-top: 8px;
+	margin-bottom: 8px;
+	line-height: 0px;
+	margin-left: 21px;
+}
+
 .products-items-image {
 	width: 100%;
 	padding: 5px 0 0 0;
@@ -481,6 +568,61 @@ input[name="user-password"] {
 	margin: 0px -26px 0px 2px;
 }
 
+.products-items-image-nokian {
+	width: 100%;
+	padding: 5px 0 0 0;
+	background-color: #fff;
+	border-radius: 9px;
+	border: 1px solid #bfc6c8;
+	margin-bottom: 0px;
+}
+
+.products-items-price-nokian {
+	font-family: Arial,Tahoma,sans-serif;
+	font-weight: bold;
+	font-style: italic;
+	color: #114165;
+	padding: 4px 0px 0px 0px;
+	margin: 0px -14px -5px 5px;
+}
+
+.products-items-image-hankook {
+	width: 100%;
+	padding: 5px 0 0 0;
+	background-color: #fff;
+	border-radius: 9px;
+	border: 1px solid #bfc6c8;
+	margin-bottom: 0px;
+	margin-left: -6px;
+}
+
+.products-items-price-hankook {
+	font-family: Arial,Tahoma,sans-serif;
+	font-weight: bold;
+	font-style: italic;
+	color: #114165;
+	padding: 3px 0px 0px 0px;
+	margin: 0px -1px -5px 5px;
+}
+
+.products-items-price-goodyear {
+	font-family: Arial,Tahoma,sans-serif;
+	font-weight: bold;
+	font-style: italic;
+	color: #114165;
+	padding: 4px 0px 0px 0px;
+	margin: 0px -26px -5px 5px;
+}
+
+.products-items-price-goodyear2 {
+	font-family: Arial,Tahoma,sans-serif;
+	font-weight: bold;
+	font-style: italic;
+	color: #114165;
+	padding: 4px 0px 0px 0px;
+	margin: 0px -26px -5px 5px;
+}
+
 .right-side {
 	padding: 0 0 0 3px;
 	float: left;
@@ -491,12 +633,13 @@ input[name="user-password"] {
 
 .side-menu-title-right {
 	font-size: 12px;
-	margin-bottom: 13px;
+	letter-spacing: 1px;
+	/* margin-bottom: 13px; */
 	-webkit-box-shadow: 0px 2px 2px 0px rgba(140,150,154,1);
 	-moz-box-shadow: 0px 2px 2px 0px rgba(140,150,154,1);
 	box-shadow: 0px 2px 2px 0px rgba(140,150,154,1);
 	font: 12px/13px "Lucida Sans Unicode", Arial, sans-serif;
-	padding-left: 8px;
+	padding-left: 2px;
 	line-height: 23px;
 	padding-top: 2px;
 	padding-bottom: 1px;
@@ -505,6 +648,7 @@ input[name="user-password"] {
 	width: 181px;
 	border-radius: 13px;
 	border: 1px solid #8b979c;
+	margin: 4px 0px 13px 3px;
 }
 
 .side-menu-title-right img {
@@ -519,6 +663,38 @@ input[name="user-password"] {
 	margin: 10px 0 10px 18px;
 }
 
+.side-block-title-tires {
+	width: 151px;
+	padding-left: 5px;
+	padding-top: 1px;
+	font-size: 14px;
+	font: 12px/13px "Lucida Sans Unicode", Arial, sans-serif;
+	padding-left: 1px;
+	line-height: 23px;
+	letter-spacing: 1px;
+	padding-top: 2px;
+	padding-bottom: 1px;
+	color: #114165;
+	display: block;
+	width: 130px;
+	border-radius: 13px;
+	border: 1px solid #8b979c;
+}
+
+.side-block-title-tires img {
+	content: "";
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+	vertical-align: middle;
+	margin: 2px 5px 2px 2px;
+	vertical-align: middle;
+}
+
+.side-block-title-tires span {
+	margin: 0px 0px 0px 0px;
+}
+
 .side-menu-block-right-two {
 	height: auto;
 	width: 180px;
@@ -526,28 +702,75 @@ input[name="user-password"] {
 	margin: 24px 0 10px 18px;
 }
 
-.checkbox-menu-item {
+.checkbox-menu-item-tires {
 	position: relative;
 	display: block;
 	height: 15px;
 	width: 100%;
 	color: #465961;
-	margin: 6px 0 7px;
-	padding: 0 0 0 34px;
+	margin: 7px 0px 10px -3px;
+	padding: 0 0 0 35px;
+	letter-spacing: 0.2px;
 	font: 12px/13px "Lucida Sans Unicode", Arial, sans-serif;
 }
 
-.checkbox-menu-item input{
+.checkbox-menu-item-discks {
+	position: relative;
+	display: block;
+	height: 15px;
+	width: 100%;
+	color: #465961;
+	margin: 7px 0px 10px -3px;
+	padding: 0 0 0 35px;
+	letter-spacing: 0.2px;
+	font: 12px/13px "Lucida Sans Unicode", Arial, sans-serif;
+}
+
+.side-block-title-discks {
+	font-size: 14px;
+	font: 12px/13px "Lucida Sans Unicode", Arial, sans-serif;
+	padding-left: 1px;
+	line-height: 23px;
+	letter-spacing: 1px;
+	padding-top: 2px;
+	padding-bottom: 1px;
+	margin: -11px 0px 0px -3px;
+	color: #114165;
+	display: block;
+	width: 133px;
+	border-radius: 13px;
+	border: 1px solid #8b979c;
+}
+
+.side-block-title-discks img {
+	content: "";
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+	vertical-align: middle;
+	margin: 2px 5px 2px 2px;
+	vertical-align: middle;
+}
+
+.checkbox-menu-item-tires input{
 	position: absolute;
 	top: 1px;
 	left: 10px;
 }
 
+.checkbox-menu-item-discks input{
+	position: absolute;
+	top: 1px;
+	left: 10px;
+}
+
+
 .choose {
-	margin: -29px 8px 43px 35px;
-	padding-top: 0px;
+	margin: 11px 8px 42px 27px;
 	width: 80px;
 	height: 24px;
+	position: absolute;
+	letter-spacing: 0.7px;
 	color: #e5e9ea;
 	font-size: 11px;
 	-webkit-border-radius: 10px/11px;
@@ -571,23 +794,91 @@ input[name="user-password"] {
 	width: 100%;
 	text-align: center;
 	margin-top: 3px;
-	margin-bottom: 58px;
+	margin-bottom: 87px;
 	margin-left: 6px;
+	position: relative;
 }
 
-.tire-companies a {
+.toyo {
+	margin: 11px 0px 0px -346px;
+	padding: 0px 0px;
+	vertical-align: top;
+	display: inline-block;
+	text-decoration: none;
+	position: absolute;
+}
+
+.bridgestone {
+	margin: 10px 0px 0px -249px;
+	padding: 0px 0px;
+	vertical-align: top;
+	display: inline-block;
+	position: absolute;
+	text-decoration: none;
+}
+
+.continental {
 	margin-right: 9px;
 	vertical-align: top;
 	display: inline-block;
 	text-decoration: none;
+	position: absolute;
+	margin: 10px 0px 0px -141px;
+}
+
+.cooper {
+	margin-right: 9px;
+	vertical-align: top;
+	display: inline-block;
+	position: absolute;
+	text-decoration: none;
+	margin: 9px 0px 0px -49px;
+}
+
+.avon {
+	margin-right: 9px;
+	margin-left: 1px;
+	vertical-align: top;
+	display: inline-block;
+	position: absolute;
+	text-decoration: none;
+	margin: 11px 0px 0px 23px;
+}
+
+.factory {
+	padding: 0px 2px 0px 0px;
+	margin-bottom: 4px;
+	vertical-align: top;
+	position: absolute;
+	display: inline-block;
+	margin: 6px 0px 0px 114px;
+	text-decoration: none;
+}
+
+.tirelli {
+	margin-right: 16px;
+	vertical-align: top;
+	position: absolute;
+	display: inline-block;
+	text-decoration: none;
+	margin: 10px 0px 0px 183px;
+}
+
+.dunlop {
+	margin-right: 10px;
+	vertical-align: top;
+	display: inline-block;
+	position: absolute;
+	text-decoration: none;
+	margin: 10px 0px 0px 259px;
 }
 
 /*FOOTER*/
 footer {
-	width: 910px;
-	margin: -40px auto;
+	width: 899px;
+	margin: -40px 0px 0px 220px;
 	background-color: #213a4d;
-	padding: 0px 0px 52px 10px;
+	padding: 0px 0px 54px 10px;
 }
 
 .footer-nav {
@@ -603,7 +894,35 @@ footer {
 	font-size: 10px;
 }
 
-.footer-nav__item a {
+.item--company {
+	font-size: 12px;
+	color: #bec6c9;
+	margin-left: 9px;
+	padding: 0px 9px;
+	border-right: 1px solid #7a878f;
+	border-left: 1px solid #8d989;
+	text-decoration: none;
+}
+
+.item--dost {
+	font-size: 12px;
+	color: #bec6c9;
+	padding: 0px 11px;
+	border-right: 1px solid #7a878f;
+	border-left: 1px solid #8d989;
+	text-decoration: none;
+}
+
+.item--stat {
+	font-size: 12px;
+	color: #bec6c9;
+	padding: 0px 13px;
+	border-right: 1px solid #7a878f;
+	border-left: 1px solid #8d989;
+	text-decoration: none;
+}
+
+.item--contact {
 	font-size: 12px;
 	color: #bec6c9;
 	padding: 0 14px;
